# qml6-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  stdafx.h
